2002-07-18  David Hyatt  <hyatt@apple.com>

        * khtml/css/css_valueimpl.cpp:
        Changed the QRegExps used for font family matching to statics.  Helped out
        one page on the base tests a fair bit.  Overall (spread over all 40 pages)
        it's not that big though.
        
2002-07-18  David Hyatt  <hyatt@apple.com>

        Small change that gives us 25% speedup (uncached) on the cvs-base suite.

        * khtml/css/cssstyleselector.cpp:
        Optimized CLASS style comparison to avoid allocing QStrings when the CLASS
        attribute only contains one entry (as opposed to a list of entries).
        
=== Alexander-13 ===

2002-07-17  Darin Adler  <darin@apple.com>

        * kwq/KWQKHTMLPartImpl.mm: (KWQKHTMLPartImpl::requestFrame):
	Take out bogus check for nil path -- a URL with a nil path is OK, for example "about:blank".
	Also improved log message.

2002-07-16  Maciej Stachowiak  <mjs@apple.com>

        Moved URL mouseover status to KWQKHTMLPartImpl, and made it
	responsive to modifier key presses, if enabled. Fixes:

	Radar 2980152 - Link mouseover status messages are not localizable
	Radar 2982043 - Link mouse-over status should change in response to modifier keys

	* khtml/khtml_part.cpp:
        (KHTMLPart::overURL): Remove extensive APPLE_CHANGES, and just call the
	impl method.
        * kwq/KWQKHTMLPartImpl.h: Prototype overURL method.
        * kwq/KWQKHTMLPartImpl.mm:
        (KWQKHTMLPartImpl::overURL): Construct status messages using format strings
	for localizability; change message in response to modifiers if modifier
	tracking is enabled.
        * kwq/WebCoreBridge.h: Prototype modifierTrackingEnabled method.

2002-07-16  Richard Williamson (Local)  <rjw@apple.com>

        Fixed field length test.  We were testing >= instead of >.
        * kwq/KWQNSTextField.mm:
        (-[KWQNSTextFieldFormatter isPartialStringValid:newEditingString:errorDescription:]):

2002-07-16  Darin Adler  <darin@apple.com>
